Sun Feb 22 23:14:25 1998  Steve Cameron  <steve.cameron@compaq.com>
	and Ian Lance Taylor  <ian@cygnus.com>

	* update.c (tag_update_dir): New static variable.
	(update_dirent_proc): If no tag or date were specified when
	creating a subdirectory, use the tag and/or date of the parent
	directory.
	(update_dirleave_proc): If we set the tag and/or date in
	update_dirent_proc, reset them when we leave the directory.
	* sanity.sh (branches2): New set of tests for above patch, and
	related behaviour.

Sun Feb 22 13:31:51 1998  Ian Lance Taylor  <ian@cygnus.com>

	* commit.c (lock_RCS): Don't call RCS_rewrite.

	* update.c (patch_file): If the revision is dead, let
	checkout_file handle it.
	* sanity.sh (death2): Add test for above patch: add
	death2-10a, death2-10b, death2-13a, and adjust
	death2-{2,4,5,11,14,diff-11,diff-12,19}.

	* cvs.h (RCS_FLAGS_KEEPFILE): Define.
	* rcs.c (RCS_checkin): If RCS_FLAGS_KEEPFILE is set in the flags
	parameter, don't unlink the working file.
	* checkin.c (Checkin): Don't copy the file.  Instead pass
 	RCS_FLAGS_KEEPFILE to RCS_checkin, and only check the file out
	again if it has changed.

1998-02-21  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (rcs_internal_unlockfile, RCS_rewrite): Don't assume errno
	means anything just because ferror is set.

Sat Feb 21 20:02:24 1998  Ian Lance Taylor  <ian@cygnus.com>

	* Makefile.in (clean): Change "/bin/rm" to "rm".

	* buffer.c (buf_append_buffer): Correct typo in comment.
	* rcs.c (RCS_putadmin): Likewise.

Fri Feb 20 17:53:06 1998  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (rcs_internal_unlockfile): Pass errno when calling error
 	because ferror is true.

1998-02-20  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (abspath): Don't assume that we can't write to /; this
	is the kind of thing that is sure to break sooner or later
	(especially on Windows).

	* sanity.sh: Add summary of which modules tests are which (at