@@ -1,3 +1,9 @@
+1998-02-26  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* sanity.sh (conflicts3): Tests conflicts3-16 and conflicts3-20
+	test that we include update_dir in messages.  Rename test
+	conflicts3-14 to fix typo.
+
 Sun Feb 22 23:14:25 1998  Steve Cameron  <steve.cameron@compaq.com>
 	and Ian Lance Taylor  <ian@cygnus.com>
 
